Fixed not showing categories when player2 plays first round
