# backend/src/main/java/org/borg/backend/multiplayer/model/GameStateResponse.java
@@ -20,4 +20,5 @@ public class GameStateResponse {
     private Map<Long, Integer> scores;
     private GameStatus status;
     private Set<PlayerQuestionResult> results;
+    private List<Long> questionIds;
 }
